Add statistics endpoint
